# servers-benchmark

./: .gitignore  README.md  build-all.sh  pom.xml
.github/: pull_request_template.md
bun-elysia/: bun.lockb  package-lock.json  package.json  run.sh
bun-hono/: bun.lockb
bun-server-workers/: README.md  package.json  run.sh
c-scratch/: README.md  build.sh  install-deps.sh  run.sh  webserver.c
clojure-ring-jetty/: .gitignore  README.md  project.clj  run.sh  setup.sh
cpp-drogon/: build.sh  install-deps.sh  run.sh
crystal-spider-gazelle/: build.sh  install-deps.sh  run.sh
dart-shelf/: install-deps.sh  pubspec.yaml  run.sh
deno-fresh/: package-lock.json  run.sh
elixir_phoenix_cowboy/: .gitignore  README.md  install-deps.sh  mix.exs  run.sh  setup.sh
gatling-benchmarks/: mvnw  run-bun-elysia.sh  run-bun-hono.sh  run-bun-http-server-worker.sh  run-bun-http-server.sh  run-c-scratch.sh  run-clojure-ring-jetty.sh  run-cpp-drogon.sh  run-crystal-spider-gazelle.sh  run-dartshelf.sh  run-deno-fresh.sh  run-elixir-phoenix-cowboy.sh  run-gleam-mist.sh  run-go.sh  run-haskell-scotty.sh  run-haskell-warp.sh  run-java-blade.sh  run-java-httpserver-virtual-threads.sh  run-java-httpserver.sh  run-java-iouring.sh  run-julia-genie.sh  run-kotlin-http4k.sh  run-kotlin-ktor.sh  run-lua-pegasus.sh  run-lua.sh  run-may_minihttp.sh  run-micronaut.sh  run-netty-mono.sh  run-netty-mono2.sh  run-netty.sh  run-nim2-beast.sh  run-nodejs-http-server-worker.sh  run-nodejs-http-server.sh  run-nodejsexpress.sh  run-ocaml-http_async.sh  run-perl.sh  run-php-embeded-server.sh  run-php-nginx.sh  run-python-fast-api-hypercorn.sh  run-python-fast-api.sh  (+23 more)
gleam-mist/: install-deps.sh  manifest.toml  run.sh
haskell-scotty/: .gitignore  CHANGELOG.md  Main.hs  haskell-scotty.cabal  setup.sh
haskell-warp/: build.sh  haskell.cabal  install-deps.sh  run.sh
java-blade/: pom.xml  run.sh
java-httpserver/: pom.xml  run-virtual.sh  run.sh
java-nio_uring/: pom.xml  run.sh
java-smart-http/: pom.xml
julia-genie/: run.sh  server.jl
k6-benchmarks/: README.md  run-bun-elysia.sh  run-bun-hono.sh  run-bun-http-server-worker.sh  run-bun-http-server.sh  run-c-scratch.sh  run-clojure-ring-jetty.sh  run-cpp-drogon.sh  run-crystal-spider-gazelle.sh  run-dartshelf.sh  run-deno-fresh.sh  run-elixir-phoenix-cowboy.sh  run-gleam-mist.sh  run-go.sh  run-haskell-scotty.sh  run-haskell-warp.sh  run-java-blade.sh  run-java-httpserver-virtual-threads.sh  run-java-httpserver.sh  run-java-iouring.sh  run-julia-genie.sh  run-kotlin-http4k.sh  run-kotlin-ktor.sh  run-lua-pegasus.sh  run-may_minihttp.sh  run-micronaut.sh  run-netty-mono.sh  run-netty-mono2.sh  run-netty.sh  run-nim2-beast.sh  run-nodejs-http-server-worker.sh  (+29 more)
rust-gotham/: Cargo.toml  README.md  run.sh
rust-gotham/src/: main.rs
rust-hyper/: Cargo.toml  README.md  run.sh
rust-hyper/src/: main.rs
rust-may_minihttp/: Cargo.toml
rust-may_minihttp/src/: main.rs
rust-salvo/: Cargo.toml  run.sh
rust-salvo/src/: main.rs
rust-xitca/: Cargo.toml  run.sh
rust-xitca/src/: main.rs
(+628 files in other folders)
