[package]
name = "rust-hyper"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
hyper = { version = "1.0.0-rc.4", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.3"
hyper-util = { git = "https://github.com/hyperium/hyper-util.git" }

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]