[package]
name = "main"
version = "1.0.0"
authors = ["Diego.Pacheco"]
edition = "2021"

[dependencies]
may_minihttp = { git = "https://github.com/Xudong-Huang/may_minihttp.git" }
yarte = { version = "0.15", features = ["bytes-buf", "json"] }
serde_json = "1"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]