[package]
name = "example-hello"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
salvo = "0.55"
tokio = { version = "1", features = ["macros"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                
    "fast-rng",          
    "macro-diagnostics", 
]